@@ -9,6 +9,8 @@ hspace="10" width="100" height="100" alt="B"></a>Release Notes</h1>
 
 <ul>
 
+	<li>Added 64-bit configurations to the VC++ project files (STR #129)</li>
+
 	<li>Fixed conformance of mxmldoc's HTML and CSS output.</li>
 
 	<li>Added data accessor ("get") functions and made the mxml_node_t and
