@@ -202,6 +202,7 @@ mxml_save_cb_t</A></LI>
 <LI><A href="#mxml_type_e" title="The XML node type.">mxml_type_e</A></LI>
 </UL>
 </LI>
+</UL>
 <H2 class="title"><A name="FUNCTIONS">Functions</A></H2>
 <H3 class="function"><A name="mxmlAdd">mxmlAdd</A></H3>
 <P class="description">Add a node to a tree.</P>
@@ -1394,8 +1395,8 @@ NULL</CODE>.</P>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a CDATA
- element node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a CDATA element node.</P>
 <H3 class="function"><A NAME="8_2_57">
 <!--span class=&quot;info&quot;-->
 &nbsp;Mini-XML 2.1&nbsp;<A name="mxmlSetCustom">mxmlSetCustom</A></A></H3>
@@ -1419,8 +1420,8 @@ NULL</CODE>.</P>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a custom
- node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a custom node.</P>
 <H3 class="function"><A name="mxmlSetCustomHandlers">
 mxmlSetCustomHandlers</A></H3>
 <P class="description">Set the handling functions for custom data.</P>
@@ -1487,8 +1488,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not an integer
- node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not an integer node.</P>
 <H3 class="function"><A name="mxmlSetOpaque">mxmlSetOpaque</A></H3>
 <P class="description">Set the value of an opaque node.</P>
 <P class="code"> int mxmlSetOpaque (
@@ -1505,8 +1506,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not an opaque
- node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not an opaque node.</P>
 <H3 class="function"><A name="mxmlSetReal">mxmlSetReal</A></H3>
 <P class="description">Set the value of a real number node.</P>
 <P class="code"> int mxmlSetReal (
@@ -1523,8 +1524,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a real number
- node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a real number node.</P>
 <H3 class="function"><A name="mxmlSetText">mxmlSetText</A></H3>
 <P class="description">Set the value of a text node.</P>
 <P class="code"> int mxmlSetText (
@@ -1544,7 +1545,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a text node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a text node.</P>
 <H3 class="function"><A name="mxmlSetTextf">mxmlSetTextf</A></H3>
 <P class="description">Set the value of a text node to a formatted
  string.</P>
@@ -1568,7 +1570,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a text node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a text node.</P>
 <H3 class="function"><A NAME="8_2_66">
 <!--span class=&quot;info&quot;-->
 &nbsp;Mini-XML 2.7&nbsp;<A name="mxmlSetUserData">mxmlSetUserData</A></A></H3>
@@ -1736,7 +1739,6 @@ mxml_sax_event_e</A> mxml_sax_event_t;</P>
 <DT>MXML_TEXT</DT>
 <DD class="description">Text fragment</DD>
 </DL>
-</UL>
 </DIV><HR NOSHADE>
 <A HREF="index.html">Contents</A>
 <A HREF="relnotes.html">Previous</A>
