@@ -2026,6 +2026,7 @@ hspace="10" src="A.gif" width="100"></A>Mini-XML License</H1>
 hspace="10" src="B.gif" width="100"></A>Release Notes</H1>
 <H2><A NAME="7_1">Changes in Mini-XML 2.7</A></H2>
 <UL>
+<LI>Fixed conformance of mxmldoc's HTML and CSS output.</LI>
 <LI>Added data accessor (&quot;get&quot;) functions and made the mxml_node_t and
  mxml_index_t structures private but still available in the Mini-XML
  header to preserve source compatibility (STR #118)</LI>
@@ -2489,6 +2490,7 @@ mxml_save_cb_t</A></LI>
 <LI><A href="#mxml_type_e" title="The XML node type.">mxml_type_e</A></LI>
 </UL>
 </LI>
+</UL>
 <H2 class="title"><A name="FUNCTIONS">Functions</A></H2>
 <H3 class="function"><A name="mxmlAdd">mxmlAdd</A></H3>
 <P class="description">Add a node to a tree.</P>
@@ -3681,8 +3683,8 @@ NULL</CODE>.</P>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a CDATA
- element node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a CDATA element node.</P>
 <H3 class="function"><A NAME="8_2_57">
 <!--span class=&quot;info&quot;-->
 &nbsp;Mini-XML 2.1&nbsp;<A name="mxmlSetCustom">mxmlSetCustom</A></A></H3>
@@ -3706,8 +3708,8 @@ NULL</CODE>.</P>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a custom
- node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a custom node.</P>
 <H3 class="function"><A name="mxmlSetCustomHandlers">
 mxmlSetCustomHandlers</A></H3>
 <P class="description">Set the handling functions for custom data.</P>
@@ -3774,8 +3776,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not an integer
- node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not an integer node.</P>
 <H3 class="function"><A name="mxmlSetOpaque">mxmlSetOpaque</A></H3>
 <P class="description">Set the value of an opaque node.</P>
 <P class="code"> int mxmlSetOpaque (
@@ -3792,8 +3794,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not an opaque
- node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not an opaque node.</P>
 <H3 class="function"><A name="mxmlSetReal">mxmlSetReal</A></H3>
 <P class="description">Set the value of a real number node.</P>
 <P class="code"> int mxmlSetReal (
@@ -3810,8 +3812,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a real number
- node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a real number node.</P>
 <H3 class="function"><A name="mxmlSetText">mxmlSetText</A></H3>
 <P class="description">Set the value of a text node.</P>
 <P class="code"> int mxmlSetText (
@@ -3831,7 +3833,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a text node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a text node.</P>
 <H3 class="function"><A name="mxmlSetTextf">mxmlSetTextf</A></H3>
 <P class="description">Set the value of a text node to a formatted
  string.</P>
@@ -3855,7 +3858,8 @@ mxmlSetCustomHandlers</A></H3>
 <H4 class="returnvalue">Return Value</H4>
 <P class="description">0 on success, -1 on failure</P>
 <H4 class="discussion">Discussion</H4>
-<P class="discussion">The node is not changed if it is not a text node.</P>
+<P class="discussion">The node is not changed if it (or its first child)
+ is not a text node.</P>
 <H3 class="function"><A NAME="8_2_66">
 <!--span class=&quot;info&quot;-->
 &nbsp;Mini-XML 2.7&nbsp;<A name="mxmlSetUserData">mxmlSetUserData</A></A></H3>
@@ -4023,7 +4027,6 @@ mxml_sax_event_e</A> mxml_sax_event_t;</P>
 <DT>MXML_TEXT</DT>
 <DD class="description">Text fragment</DD>
 </DL>
-</UL>
 </DIV><HR NOSHADE>
 <H1 align="right"><A name="SCHEMA"><IMG align="right" alt="D" height="100"
 hspace="10" src="D.gif" width="100"></A>XML Schema</H1>
